Add latest_version and versions as workflow fields
